# chem-agnostic

./: .gitignore  .npmrc  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  turbo.json  vitest.root.config.ts  vitest.shared.ts
.changeset/: README.md  (+7 more)
apps/reference-monorepo/apps/api/: pyproject.toml  workspace.yaml
apps/reference-monorepo/apps/api/src/: main.py
apps/reference-monorepo/apps/api/src/compounds/auth/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/auth/adapters/: jwt_token_verifier.py
apps/reference-monorepo/apps/api/src/compounds/auth/elements/: auth_token.py  principal.py
apps/reference-monorepo/apps/api/src/compounds/errors/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/healthcheck/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/integrations/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/observability/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/repositories/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/routers/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/services/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/settings/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/src/compounds/tasks/: __init__.py  compound.yaml
apps/reference-monorepo/apps/api/tests/: test_smoke.py
(+294 files in other folders)
